add netflix_titles.csv and nst-est2020.csv

--- a/.gitignore
+++ b/.gitignore
@@ -177,5 +177,6 @@ pyrightconfig.json
 .vscode/
 DataAnalysisCourseMaterials.zip
 DataAnalysis/
+mynotes.txt
 
 # End of https://www.toptal.com/developers/gitignore/api/python
